syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup";
option java_outer_classname = "CalculaFrete";
option objc_class_prefix = "HLW";

package br.com.zup;

service CalculaFreteService {
  rpc send (FreteRequest) returns (FreteReply) {}

  rpc calculaFrete(CalculaFreteRequest) returns (CalculaFreteResponse) {}
}

message ErrorDetails {
  int32 code = 1;
  string message = 2;
}

message CalculaFreteRequest {
  string cep = 1;
}

message CalculaFreteResponse {
  double valor = 1;
  string cep = 2;
}

message FreteRequest {
  string name = 1;
}

message FreteReply {
  string message = 1;
}